Implemented Forge 1.17.1 support, fix transformer dump...
Modloader Support Changes:
+ Forge 1.17.1 Support: 37.0.10 (new)
+ Forge 1.16.5 Support: 36.1.65 -> 36.2.1
+ Paper 1.17.1 Support: 119 -> 132

FLUID changes:
+ Fix transformer dump writing program pseudocode instead of transformer pseudocode
+ Fix TAIL inject location not pasting before return
+ Added: TargetOwner annotation, sets the owner of  a method

MTK changes:
+ Fix compatibility mappings: if obfuscated and name match, check the 'mappings' input and try again
+ Forge namings in MCP mappings (uses mojang class names and MCP members)
+ Fix rift test

Other changes:
+ Update README
+ Update 1.17.1 workflow yml to build for forge
+ Update installer forge server (to test)
+ Fix addforgeversion.sh not correctly saving forge information
+ Update installer version
+ CyanForge 1.17.1 server jar forks a new JVM with the forge argument document instead of using a run script
+ Improve genlocalinstaller.sh
+ Improve MTK Yggdrasil Login Window
+ Fix installer libraries not being added correctly (multiple files per artifact are now allowed)